add marking, update comments

--- a/02-character-consistent-fine-tuning-with-amazon-nova-canvas/picchu-finetuning.ipynb
+++ b/02-character-consistent-fine-tuning-with-amazon-nova-canvas/picchu-finetuning.ipynb
@@ -18,6 +18,10 @@
     "- Appropriate IAM permissions for Bedrock, S3, and related services\n",
     "- This notebook must be run in the `us-east-1` AWS region\n",
     "\n",
+    "<div class=\"alert alert-info\">\n",
+    "<b>INFO:</b> At the time of development, Amazon Nova Canvas model is only available in `us-east-1`\n",
+    "</div>\n",
+    "\n",
     "### What You'll Learn\n",
     "- How to prepare training data from existing character images\n",
     "- How to configure and run a fine-tuning job on Amazon Nova Canvas\n",
@@ -35,17 +39,6 @@
     "\n",
     "First, let's install the required dependencies for this notebook. These packages will help us with image processing, AWS interactions, and visualization.\n",
     " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "python-version-check",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "print(f\"Python version: {sys.version}\")"
    ]
   },
   {
@@ -92,23 +85,26 @@
     "import os\n",
     "import shutil\n",
     "\n",
-    "sess = sagemaker.Session()\n",
-    "role = sagemaker.get_execution_role()\n",
+    "region = \"us-east-1\"\n",
+    "boto_session = boto3.Session(region_name=region)\n",
+    "sess = sagemaker.Session(boto_session=boto_session)\n",
     "\n",
-    "bucket = sess.default_bucket() # Set a default S3 bucket or use your own\n",
+    "if sess.default_bucket(): \n",
+    "    bucket = sess.default_bucket()\n",
+    "else:\n",
+    "    bucket = \"XXXXXXXXXXXXX\" # Use your own\n",
+    "\n",
     "prefix = \"picchu-canvas/images\"\n",
     "\n",
     "\n",
     "# Initialize Boto3 Clients\n",
-    "bedrock = boto3.client('bedrock', region_name=\"us-east-1\")\n",
-    "bedrock_runtime = boto3.client('bedrock-runtime', region_name=\"us-east-1\")\n",
-    "s3 = boto3.client('s3')\n",
-    "iam_client = boto3.client('iam')\n",
-    "sts_client = boto3.client('sts')\n",
+    "bedrock = boto_session.client('bedrock')\n",
+    "bedrock_runtime = boto_session.client('bedrock-runtime')\n",
+    "s3 = boto_session.client('s3')\n",
+    "iam_client = boto_session.client('iam')\n",
+    "sts_client = boto_session.client('sts')\n",
     "\n",
     "# Account and region info\n",
-    "session = boto3.session.Session()\n",
-    "region = session.region_name\n",
     "account_id = sts_client.get_caller_identity()[\"Account\"]\n",
     "\n",
     "# Base model id for fine-tuning\n",
@@ -205,7 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "updated_data = process_folders(image_dirs, bucket, prefix)"
+    "updated_data = process_folders([image_dir], bucket, prefix)"
    ]
   },
   {
@@ -491,17 +487,11 @@
    "source": [
     "### Set Job Name\n",
     "\n",
-    "If you're returning to this notebook after starting a fine-tuning job, you can set the job name manually here. This allows you to check the status of an existing job without having to restart the entire process."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24fcf3b2-e636-4d32-b144-cbddff810363",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jobName = \"picchu-canvas-v0-2025-05-03-14-21-53-486\""
+    "The code below allows you to check the status of an existing job.\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "<b>WARNING:</b> This job can take up to 12 hours to complete. Please be patient, you can always comeback and continue the subsequent steps.\n",
+    "</div>"
    ]
   },
   {
@@ -515,12 +505,8 @@
     "status = bedrock.list_model_customization_jobs(\n",
     "    nameContains=jobName\n",
     ")[\"modelCustomizationJobSummaries\"][0][\"status\"]\n",
-    "while status == 'InProgress':\n",
-    "    time.sleep(600)\n",
-    "    status = bedrock.list_model_customization_jobs(\n",
-    "        nameContains=jobName\n",
-    "    )[\"modelCustomizationJobSummaries\"][0][\"status\"]\n",
-    "    print(status)"
+    "\n",
+    "print(status)"
    ]
   },
   {
@@ -528,7 +514,7 @@
    "id": "333cf65f-b333-46cc-bf21-748b6b34921d",
    "metadata": {},
    "source": [
-    "Once Complete, get the new `customModelARN`"
+    "Once Complete, get the new `customModelARN` using the code below, or you can manually set the parameter by copying the `customModelARN` from the console. "
    ]
   },
   {
@@ -541,14 +527,6 @@
     "custom_model_arn = bedrock.list_model_customization_jobs(\n",
     "    nameContains=jobName\n",
     ")[\"modelCustomizationJobSummaries\"][0][\"customModelArn\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c049aa61-59c7-4b54-ad79-62a11e9e477a",
-   "metadata": {},
-   "source": [
-    "This will take a few hours. You can also cancel the status check and just manually past in the ARN once the training is complete."
    ]
   },
   {
@@ -567,8 +545,12 @@
    "metadata": {},
    "source": [
     "## Host Fine-tuned Model With Provisioned Throughput (PT)\n",
-    "Note: Creating provisioned throughput will take around 20-30mins to complete.\n",
-    "You will need to create provisioned throughput to be able to evaluate the model performance. You can do so through the console or use the following api call."
+    "\n",
+    "You will need to create provisioned throughput to be able to evaluate the model performance. You can do so through the console or use the following api call.\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "<b>WARNING:</b> Creating provisioned throughput will take 30mins to complete.\n",
+    "</div>"
    ]
   },
   {
@@ -608,14 +590,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa4bcd6-2194-4908-a092-54b318338f55",
-   "metadata": {},
-   "source": [
-    "You can also manually paste in the PT ARN here."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "52d998c5-3cb5-488c-a0fd-2aec17c847b7",
    "metadata": {},
    "source": [
@@ -631,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "provisioned_model_id = \"arn:aws:bedrock:us-east-1:522872317232:provisioned-model/osgkubwx2ejk\""
+    "# provisioned_model_id = \"<ENTER-YOUR-PT-ARN>\""
    ]
   },
   {
@@ -758,7 +732,10 @@
    "metadata": {},
    "source": [
     "## Clean Up\n",
-    "Remove provision throughput and fine-tuned model"
+    "\n",
+    "<div class=\"alert alert-danger\">\n",
+    "<b>WARNING:</b> After you are done, please remove provision throughput and fine-tuned model to avoid additional charges\n",
+    "</div>"
    ]
   },
   {
@@ -766,9 +743,7 @@
    "id": "c51ef7eb-12b6-4c72-a20a-fdea985d92e7",
    "metadata": {},
    "source": [
-    "### Delete Provisioned Throughput\n",
-    "\n",
-    "To avoid ongoing charges, we'll delete the provisioned throughput we created. This stops the billing for the dedicated compute resources allocated to our fine-tuned model."
+    "Delete Provisioned Throughput"
    ]
   },
   {
@@ -788,9 +763,7 @@
    "id": "ca99168f-b29d-49aa-9fd3-60be78f23d08",
    "metadata": {},
    "source": [
-    "### Delete Custom Model\n",
-    "\n",
-    "Finally, we'll delete the fine-tuned custom model itself. This removes the model from your Amazon Bedrock account and stops any associated storage charges. Only do this when you're completely finished with your experiments and no longer need this specific fine-tuned model."
+    "Delete Custom Model"
    ]
   },
   {
@@ -804,19 +777,11 @@
     "    modelIdentifier=custom_model_arn\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30dcae28-7d4f-4992-bc5a-2b3d3976d134",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "jupyter-notebook",
    "language": "python",
    "name": "python3"
   },
