update to blog 1

--- a/01-character-consistent-storyboarding-with-amazon-nova/02-storyboard-generation.ipynb
+++ b/01-character-consistent-storyboarding-with-amazon-nova/02-storyboard-generation.ipynb
@@ -2,16 +2,42 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32de04f9-835f-4373-8d5e-9772a15a426b",
+   "id": "2d955b7f",
    "metadata": {},
    "source": [
-    "# Install requirements and set up Bedrock client"
+    "# Character-Consistent Storyboard Generation\n",
+    "In this hands-on session, we'll incorporate character consistency techniques to create cohesive storyboards for visual storytelling and animation development using Amazon Bedrock.\n",
+    "\n",
+    "## Workshop Objectives\n",
+    "By the end of this workshop, you will:\n",
+    "1. Understand how to use generative AI to create structured story scenes from a simple concept.\n",
+    "2. Learn how to utilize character and style consistency techniques to create consistent storyboard panels using Nova Canvas.\n",
+    "3. Use the generated panel images as references to create animated storyboards using Nova Reel.\n",
+    "4. Develop a complete storyboard workflow from concept to visualization.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5717db7",
+   "metadata": {},
+   "source": [
+    "## Introduction to Storyboard Generation\n",
+    "\n",
+    "Storyboarding is a critical step in the visual development process for animation, film, and other visual media. It helps visualize the narrative flow, camera angles, character positioning, and scene transitions before committing to full production.\n",
+    "\n",
+    "In this notebook, we'll use a combination of generative AI models to create a complete storyboarding workflow:\n",
+    "\n",
+    "1. **Claude 3 Sonnet** - For generating structured story scenes and refining image prompts\n",
+    "2. **Nova Canvas** - For creating consistent storyboard panels\n",
+    "3. **Nova Reel** - For animating selected panels into short video clips\n",
+    "\n",
+    "To begin, run the cell below to set up the necessary dependencies and create instances of the Bedrock clients we'll use throughout this workshop.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82c5b195-15bb-4d6f-9a7f-b29d0d70fdd4",
+   "id": "06489df1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,54 +45,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18518c79-3d77-48c5-8605-4411042e425b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto3\n",
-    "import base64\n",
-    "import json\n",
-    "import time\n",
-    "import random\n",
-    "import sagemaker\n",
-    "\n",
-    "from helpers.bedrock_helpers import generate_text, generate_images, get_random_seed, get_task_status\n",
-    "from helpers.display_helpers import display_story_table, display_prompt_table, display_storyboard, display_hyperlink\n",
-    "from helpers.prompt_helpers import system_prompts, get_character_descriptions, get_style_prompt\n",
-    "\n",
-    "bedrock_client = boto3.client(\"bedrock-runtime\")\n",
-    "bedrock_client_us_east = boto3.client(\"bedrock-runtime\", region_name=\"us-east-1\")\n",
-    "\n",
-    "session = sagemaker.Session()\n",
-    "default_bucket = session.default_bucket()\n",
-    "role = sagemaker.get_execution_role()"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "95b4826e-7adc-462b-a6f3-2f1cc5e56a9b",
+   "id": "b499a7e5",
    "metadata": {},
    "source": [
-    "### Make sure the role below has the following permissions:\n",
-    "- bedrock:invoke_model\n",
-    "- bedrock:GetAsyncInvoke"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc3ce7d0-7168-439f-8618-4c64c3208b7c",
-   "metadata": {},
-   "source": [
-    "### You can use the following policy:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "00ff0a44-77ca-4d45-8f0d-bf1a14bf0a86",
-   "metadata": {},
-   "source": [
+    "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<strong>⚠️ Important:</strong> Make sure your IAM role has the necessary permissions to invoke Bedrock models and access S3 for storing generated assets.\n",
+    "</div>\n",
+    "\n",
+    "### IAM Permissions Requirements\n",
+    "\n",
+    "To run this notebook successfully, your IAM role needs the following permissions:\n",
+    "- `bedrock:InvokeModel` - For calling the Bedrock models\n",
+    "- `bedrock:GetAsyncInvoke` - For handling asynchronous model invocations\n",
+    "\n",
+    "You can use the following policy to grant these permissions:\n",
+    "\n",
     "```\n",
     "{\n",
     "    \"Version\": \"2012-10-17\",\n",
@@ -82,31 +77,63 @@
     "        }\n",
     "    ]\n",
     "}\n",
-    "```"
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92ba98fc-86d8-4e1f-b09d-34e7351d70f8",
+   "id": "aa983dd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_hyperlink(role, f\"https://us-east-1.console.aws.amazon.com/iam/home?region=us-east-1#/roles/details/{role.split(\"/\")[-1]}?section=permissions\")"
+    "import boto3\n",
+    "import json\n",
+    "import time\n",
+    "import sagemaker\n",
+    "\n",
+    "from helpers.bedrock_helpers import (generate_text, generate_images, get_random_seed, \n",
+    "                                     generate_videos)\n",
+    "from helpers.display_helpers import (display_story_table, display_prompt_table, \n",
+    "                                     display_storyboard, display_video, display_text)\n",
+    "from helpers.prompt_helpers import (system_prompts, get_character_descriptions, \n",
+    "                                    get_style_prompt)\n",
+    "\n",
+    "session = boto3.Session(region_name=\"us-east-1\")\n",
+    "\n",
+    "bedrock_client = session.client(\"bedrock-runtime\")\n",
+    "s3_client = session.client(\"s3\")\n",
+    "\n",
+    "session = sagemaker.Session(boto_session=session)\n",
+    "default_bucket = session.default_bucket()\n",
+    "\n",
+    "# foundation model used to develop the storyboard\n",
+    "text_generation_model_id = \"us.anthropic.claude-3-7-sonnet-20250219-v1:0\"\n",
+    "image_generation_model_id = \"amazon.nova-canvas-v1:0\"\n",
+    "video_generation_model_id = \"amazon.nova-reel-v1:0\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0fe39aa0-9289-4f17-b353-aaf7d0b3a7f4",
+   "id": "815e3f42",
    "metadata": {},
    "source": [
-    "# Create the story and characters using generative AI"
+    "## Step 1: Story Generation with Claude\n",
+    "\n",
+    "The first step in our storyboarding process is to generate a structured story with well-defined scenes. We'll use Claude 3 Sonnet to create a story based on a simple idea or concept.\n",
+    "\n",
+    "In the cells below, we'll:\n",
+    "1. Define our story parameters (scene count, genre, and basic idea)\n",
+    "2. Optionally specify existing characters to include\n",
+    "3. Generate a structured story with scenes, descriptions, and imagery guidance\n",
+    "\n",
+    "Let's start by defining our story parameters:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ab7fb6-44b8-4591-80dc-a8e641844ba4",
+   "id": "5a4120fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +144,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9426f413",
+   "metadata": {},
+   "source": [
+    "Now, let's create a prompt for Claude to generate our story structure. The prompt instructs Claude to act as an award-winning director and create a specified number of scenes based on our story idea."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8a16d64-318c-4fae-9c81-c46c83a136d5",
+   "id": "281abdbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,28 +171,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d875b26",
+   "metadata": {},
+   "source": [
+    "Let's generate the story structure using Claude and display the results in a table format:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d15c2a8-f60e-42bc-aa5b-5433e8f5fa8b",
+   "id": "0b3812b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "story = generate_text(bedrock_client, user_prompt, system_prompts[\"story\"])\n",
+    "story = generate_text(bedrock_client, text_generation_model_id, user_prompt, system_prompts[\"story\"])\n",
     "display_story_table(story)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3adaef57-efa0-49f0-8c6e-199ce7804928",
+   "id": "d82ef314",
    "metadata": {},
    "source": [
-    "# For each scene, create a prompt to be used with Nova Canvas to generate storyboard panels"
+    "## Step 2: Image Prompt Generation\n",
+    "\n",
+    "Now that we have our story structure, we need to create effective prompts for Nova Canvas to generate our storyboard panels. Good prompts are crucial for getting high-quality, consistent images that accurately represent our scenes.\n",
+    "\n",
+    "In this step, we'll:\n",
+    "1. Process each scene to create a base image prompt\n",
+    "2. Use Claude to refine and condition these prompts for optimal results\n",
+    "3. Apply a consistent visual style to all prompts\n",
+    "\n",
+    "Let's generate our image prompts:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "975bc447-ad04-48ec-bfee-4c6372db0c83",
+   "id": "3d27c4c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +227,9 @@
     "            Character descriptions:\n",
     "            {get_character_descriptions(scene)}\n",
     "            \"\"\"\n",
-    "    conditioned_image_prompt = generate_text(bedrock_client, base_image_prompt, system_prompts[\"image\"])\n",
+    "    conditioned_image_prompt = generate_text(bedrock_client, text_generation_model_id, base_image_prompt, system_prompts[\"image\"])\n",
     "    time.sleep(throttle_pause_time)\n",
-    "    styled_image_prompt = generate_text(bedrock_client, f\"Image generation prompt: {conditioned_image_prompt}\", get_style_prompt(style))\n",
+    "    styled_image_prompt = generate_text(bedrock_client, text_generation_model_id, f\"Image generation prompt: {conditioned_image_prompt}\", get_style_prompt(style))\n",
     "    image_prompts[scene[\"scene_id\"]] = styled_image_prompt[\"prompt\"]\n",
     "    time.sleep(throttle_pause_time)\n",
     "\n",
@@ -186,16 +238,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b324d10-889b-40b1-95ed-714c0f8ad707",
+   "id": "ec700899",
    "metadata": {},
    "source": [
-    "# Use the generated prompts to create multiple variations of a storyboard panel for each scene"
+    "## Step 3: Storyboard Panel Generation\n",
+    "\n",
+    "With our refined image prompts ready, we can now generate storyboard panels using Nova Canvas. To ensure we have options for each scene, we'll generate multiple variations per scene.\n",
+    "\n",
+    "In this step, we'll:\n",
+    "1. Generate multiple image variations for each scene\n",
+    "2. Use a consistent seed value to maintain visual coherence\n",
+    "3. Apply negative prompting to avoid unwanted elements\n",
+    "\n",
+    "Let's generate our storyboard panels:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a2a91d3-170b-4506-948c-d0fbae0641c4",
+   "id": "148524dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,76 +269,85 @@
     "    scene_id = scene[\"scene_id\"]\n",
     "    print(\"Processing scene {}/{} ...\".format(scene_id+1, story.get(\"scene_count\")))\n",
     "    prompt = image_prompts[scene_id]\n",
-    "    images = generate_images(bedrock_client_us_east, prompt, negative_prompt, seed=seed, image_count=images_per_scene)\n",
+    "    images = generate_images(bedrock_client, image_generation_model_id, prompt, negative_prompt, seed=seed, image_count=images_per_scene)\n",
     "    storyboard_images[scene_id] = images\n",
     "display_storyboard(storyboard_images, story)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "95935387-8f6b-4484-b4d3-54bd0b5a6099",
+   "id": "8df11630",
    "metadata": {},
    "source": [
-    "# Create a video from the first image of the first scene"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5fd5d11-3f40-4771-8d0e-b8ae308a82ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video_prompt = generate_text(bedrock_client, image_prompts[0], system_prompts[\"video\"]).get(\"prompt\")\n",
-    "model_input = {\n",
-    "    \"taskType\": \"TEXT_VIDEO\",\n",
-    "    \"textToVideoParams\": {\n",
-    "        \"text\": video_prompt,\n",
-    "        \"images\": [{ \"format\": \"png\", \"source\": { \"bytes\": storyboard_images[0][0]} }]\n",
-    "    },\n",
-    "    \"videoGenerationConfig\": {\n",
-    "        \"durationSeconds\": 6,\n",
-    "        \"fps\": 24,\n",
-    "        \"dimension\": \"1280x720\",\n",
-    "        \"seed\": seed\n",
-    "    }\n",
-    "}\n",
+    "## Step 4: Video Generation from Storyboard Panel\n",
     "\n",
-    "invocation = bedrock_client_us_east.start_async_invoke(\n",
-    "    modelId=\"amazon.nova-reel-v1:0\",\n",
-    "    modelInput=model_input,\n",
-    "    outputDataConfig={\"s3OutputDataConfig\": {\"s3Uri\": f\"s3://{default_bucket}\"}}\n",
-    ")\n",
+    "As a final step, we can bring one of our storyboard panels to life by generating a short video clip using Nova Reel. This can help visualize how the scene might look in motion.\n",
     "\n",
-    "invocation_arn = invocation[\"invocationArn\"]\n",
-    "s3_prefix = invocation_arn.split('/')[-1]\n",
-    "s3_location = f\"s3://{default_bucket}/{s3_prefix}\"\n",
-    "print(f\"\\nS3 URI: {s3_location}\")\n"
+    "In this step, we'll:\n",
+    "1. Select the first image from the first scene\n",
+    "2. Generate a video prompt based on the image prompt\n",
+    "3. Create a short video clip using Nova Reel\n",
+    "\n",
+    "Let's generate our video:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36702fec-b436-4f20-a101-b357ac726c0c",
+   "id": "fa19d080",
    "metadata": {},
    "outputs": [],
    "source": [
-    "status = get_task_status(bedrock_client_us_east, invocation_arn)\n",
-    "print(f\"Status: {status}\")"
+    "video_prompt = generate_text(bedrock_client, text_generation_model_id, image_prompts[0], system_prompts[\"video\"]).get(\"prompt\")\n",
+    "display_text(f\"> Video prompt: {video_prompt}\")\n",
+    "\n",
+    "s3_location = generate_videos(bedrock_client, video_generation_model_id, video_prompt, storyboard_images[0][0], default_bucket)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "838ed3ca",
+   "metadata": {},
+   "source": [
+    "Finally, let's download and display the generated video:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c985c6b-e9dc-43ef-97dd-d79b16a19b0e",
+   "id": "3640976b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "video_output = \"output.mp4\"\n",
+    "s3_prefix = s3_location.split(\"/\")[-1]\n",
+    "s3_client.download_file(default_bucket, f\"{s3_prefix}/{video_output}\", video_output)\n",
+    "\n",
+    "# Display the video in the notebook\n",
+    "display_video(video_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "665100d8",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In this workshop, you've learned how to create a complete storyboarding workflow using Amazon Bedrock's generative AI capabilities:\n",
+    "\n",
+    "1. Using Claude to generate structured story scenes\n",
+    "2. Creating optimized image prompts for Nova Canvas\n",
+    "3. Generating consistent storyboard panels with visual coherence\n",
+    "4. Bringing storyboard panels to life with Nova Reel\n",
+    "\n",
+    "This workflow can significantly accelerate the pre-production process for animation, film, and other visual media projects, allowing creators to quickly visualize concepts and iterate on ideas before committing to full production."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jupyter-notebook",
    "language": "python",
    "name": "python3"
   },
@@ -291,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
